--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header class="container text-center">
-        <img src="" alt="avatar de -Daniel Girardi-" class="rounded-circle" width="150" height="150"
+        <img src="img/sukumba.jpeg" alt="avatar de -Daniel Girardi-" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou -Daniel Girardi-</p>
         <h1>Eu estudo Programação</h1>
