descrição de projetos

--- a/index.html
+++ b/index.html
@@ -73,29 +73,22 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Petzolaine: O instagram para seu bicho</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de
-                        livros favoritos. O objetivo é criar um ambiente virtual onde seja possível compartilhar
-                        seus livros preferidos, fornecendo uma descrição breve de cada um, incluindo o autor, o ano
-                        de publicação e uma opção de compra.</p>
-                    <p>A estrutura do site é baseada em HTML, que define a semântica e o layout do conteúdo,
-                        enquanto o CSS é usado para estilizar a página visualmente, incluindo cores, tipografia e a
-                        disposição dos elementos.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
-                    <p>O CSS personaliza o visual do site, usando variáveis para cores, estilizando o texto com uma
-                        fonte importada do Google Fonts e aplicando um esquema de cores suaves e botões interativos.
-                        O uso de HTML e CSS é importante pois assim é possível criar um site acessível e
-                        esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
-                        experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
-                        a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
+                    <p>O nosso aplicativo foi inspirado no famoso Instagram, porém ele foi adaptado para animais de
+                        estimação para aproximar os donos e os animais em comum, sendo principalmente utilizados por
+                        gatos, cachorros, periquito, coelho e hamster.</p>
+                    <p>O aplicativo foi criado por apenas 4 pessoas para seus bichinhos possam ter mais amigos e para
+                        você conhecer mais pessoas que tem pets, pois é bom vocês dois socializar, conversar ou só bater
+                        um papo amigo sobre qual é o melhor periquito, o verde ou o laranja.</p>
+                    <p>A aparência do aplicativo foi criada no papel em 2 semanas e exportada para o figma em 1 mês
+                        com poucas mudanças de seu projeto original, porém ouve problema em estilizar as cores, pois
+                        não entravamos em um consenso entre roxo e vermelho.</p>
+                    <p>No aplicativo você podera postar fotos desde a sua cacatua até seu bode chamado robertinho, encontrar
+                        outros usuario com diversos animais de estimaçao, mesmo que seja uma aranha papa-mosca, ou mesmo
+                        comprar aquela picanha de 100 conto pro seu Chihuahua manco.</p>
                     <img src="img/projeto-1.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
@@ -115,10 +108,8 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que
-                        simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é
-                        engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis
-                        consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.
+                    <p>O projeto consiste em um aparelho simples que cira sinais sonoros de codigo morse, fazendo com
+                        que você consiga utilizar um codigo utilizado na segunda guerra.
                     </p>
                     <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de
                         perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS
