--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             srcset="">
         <p class="lead">Eu sou -Daniel Girardi-</p>
         <h1>Eu estudo Programação</h1>
-        <p>Me identifico com a área de exatas, tenho preferência pelas matérias de matematica, programaçao e robótica, gosto de jogar, dormir, é ter dinheiro</p>
+        <p>Me identifico com a área de exatas, tenho preferência pelas matérias de matematica, programaçao e robótica, gosto de jogar, dormir, e dinheiro</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
@@ -41,10 +41,10 @@
          <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="" class="card-img-top" alt="Imagem do projeto de robótica">
+                    <img src="" class="card-img-top" alt="imagem do projeto de robótica>
                     <div class="card-body">
-                        <h5 class="card-title">título</h5>
-                        <p class="card-text">descrição
+                        <h5 class="card-title">codigo morse</h5>
+                        <p class="card-text">aparelho basico para utilizar codigo morse
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
@@ -57,8 +57,8 @@
                 <div class="card">
                     <img src="" class="card-img-top" alt="Imagem do projeto de robótica">
                     <div class="card-body">
-                        <h5 class="card-title">título</h5>
-                        <p class="card-text">descrição
+                        <h5 class="card-title">semaforo basico com display</h5>
+                        <p class="card-text>Sim, é um semaforo
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
