--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <header class="container text-center">
         <img src="img/sukumba.jpeg" alt="avatar de -Daniel Girardi-" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou -Daniel Girardi-</p>
+        <p class="lead">Eu sou Daniel Girardi</p>
         <h1>Eu estudo Programação</h1>
-        <p>Me identifico com a área de exatas, tenho preferência pelas matérias de matematica, programaçao e robótica, gosto de jogar, dormir, e dinheiro</p>
+        <p>Me identifico com a área de exatas, tenho preferência pelas matérias de matematica, programaçao e robótica, gosto de jogar, dormir e dinheiro</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
@@ -27,7 +27,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="" classMe identifico com a área de exatas, tenho preferência pelas matérias de matematica, programaçao e robótica, gosto de jogar, dormir, é ter dinheiro="card-img-top" alt="Imagem do projeto do FIGMA">
+                    <img src="img/esse troço.png" class="card-img-top" alt="Imagem do projeto do FIGMA">
                     <div class="card-body">
                         <h5 class="card-title">Figma: Minha rede social</h5>
                         <p class="card-text">Este projeto é uma rede social...
@@ -41,8 +41,8 @@
          <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="" class="card-img-top" alt="imagem do projeto de robótica>
-                    <div class="card-body">
+                    <img src="img/esse troço 2.png" class="card-img-top" alt="imagem do projeto de robótica>
+                    <"div class="card-body">
                         <h5 class="card-title">codigo morse</h5>
                         <p class="card-text">aparelho basico para utilizar codigo morse
                         </p>
@@ -55,7 +55,7 @@
          <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="" class="card-img-top" alt="Imagem do projeto de robótica">
+                    <img src="img/semaforo de cabo sem fio.jpeg" class="card-img-top" alt="Imagem do projeto de robótica">
                     <div class="card-body">
                         <h5 class="card-title">semaforo basico com display</h5>
                         <p class="card-text>Sim, é um semaforo
@@ -89,8 +89,8 @@
                     <p>No aplicativo você podera postar fotos desde a sua cacatua até seu bode chamado robertinho, encontrar
                         outros usuario com diversos animais de estimaçao, mesmo que seja uma aranha papa-mosca, ou mesmo
                         comprar aquela picanha de 100 conto pro seu Chihuahua manco.</p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
-                        alt="Imagem representativa do projeto de uma biblioteca online">
+                    <img src="img/esse troço.png" class="img-fluid w-100"
+                        alt="Imagem representativa do projeto de um app para animais">
                 </div>
                 <div class="modal-footer">
                     <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
@@ -104,7 +104,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Meus aparelhos: codigo morse guerreiro</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -132,8 +132,8 @@
                         sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
                         tecnologia em nossas vidas.
                     </p>
-                    <img src="img/projeto-2.png" class="img-fluid w-100"
-                        alt="Imagem representativa do projeto de uma biblioteca online">
+                    <img src="img/esse troço 2.png" class="img-fluid w-100"
+                        alt="Imagem representativa do projeto de um aparelho de codigo morse">
                 </div>
                 <div class="modal-footer">
                     <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
@@ -150,7 +150,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">meus aparelhos: semaforo bambo</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -173,7 +173,7 @@
                         interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a criar uma
                         experiência de aprendizado mais rica e memorável, encorajando os usuários a explorar e
                         interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
-                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
+                    <img src="img/semaforo de cabo sem fio.jpeg" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
                     <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
